apps/namiview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namiview-app
  namespace: namiview-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: namiview-app
  template:
    metadata:
      labels:
        app: namiview-app
    spec:
      imagePullSecrets:
        - name: namiview-dockercfg-secret
      containers:
        - name: app
          image: darbuki/namiview:01-02
          ports:
            - containerPort: 8501
          volumeMounts:
            - name: google-creds
              mountPath: "/app/google_credentials.json"
              subPath: "google_credentials.json"
              readOnly: true
      volumes:
        - name: google-creds
          secret:
            secretName: namiview-google-creds-external-secret
            items:
              - key: "google-creds.json"
                path: "google_credentials.json"
